versioned_docs/version-5.0/indexes/querying/morelikethis.mdx
---
title: "Querying: MoreLikeThis"
hide_table_of_contents: true
sidebar_label: MoreLikeThis
sidebar_position: 13
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Querying: MoreLikeThis
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


MoreLikeThis returns a list of similar documents that are related to a given document. This feature can be used for situations like when a user views an article. Many news sites show a list of the related articles at the bottom of the page. To accomplish this, the RavenDB MoreLikeThis uses the MoreLikeThis from the Lucene contrib project. To find out more about the algorithm, please read Aaron Johnson excellent blog post that is available [here](http://cephas.net/blog/2008/03/30/how-morelikethis-works-in-lucene/).      

## Setup

In order to work, MoreLikeThis requires access to the text in the index. Therefore, the index being queried needs to [store](../../indexes/storing-data-in-index.mdx) the fields or store the [term vectors](../../indexes/using-term-vectors.mdx) for those fields.

<TabItem value="more_like_this_4" label="more_like_this_4">
<CodeBlock language="csharp">
{`public class Article
\{
    public string Id \{ get; set; \}
    public string Name \{ get; set; \}
    public string ArticleBody \{ get; set; \}
\}

public class Articles_ByArticleBody : AbstractIndexCreationTask<Article>
\{
    public Articles_ByArticleBody()
    \{
        Map = docs => from doc in docs
                      select new
                      \{
                          doc.ArticleBody
                      \};

        Stores.Add(x => x.ArticleBody, FieldStorage.Yes);
        Analyzers.Add(x => x.ArticleBody, "StandardAnalyzer");
    \}
\}
`}
</CodeBlock>
</TabItem>

## Basic Usage

MoreLikeThis has many defaults already set and the simplest mode will satisfy the majority of the usage scenarios.

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`List<Article> articles = session
    .Query<Article, Articles_ByArticleBody>()
    .MoreLikeThis(builder => builder
        .UsingDocument(x => x.Id == "articles/1"))
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`List<Article> articles = session.Advanced
    .DocumentQuery<Article, Articles_ByArticleBody>()
    .MoreLikeThis(builder => builder
        .UsingDocument(x => x.WhereEquals(y => y.Id, "articles/1")))
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Articles/ByArticleBody' 
where morelikethis(id() = 'articles/1')
`}
</CodeBlock>
</TabItem>
</Tabs>

MoreLikeThis will use all the fields defined in an index. To use only a specific field or fields, pass them in `MoreLikeThisOptions.Fields` property.

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`List<Article> articles = session
    .Query<Article, Articles_ByArticleBody>()
    .MoreLikeThis(builder => builder
        .UsingDocument(x => x.Id == "articles/1")
        .WithOptions(new MoreLikeThisOptions
        {
            Fields = new[] { nameof(Article.ArticleBody) }
        }))
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`List<Article> articles = session.Advanced
    .DocumentQuery<Article, Articles_ByArticleBody>()
    .MoreLikeThis(builder => builder
        .UsingDocument(x => x.WhereEquals(y => y.Id, "articles/1"))
        .WithOptions(new MoreLikeThisOptions
        {
            Fields = new[] { nameof(Article.ArticleBody) }
        }))
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Articles/ByArticleBody' 
where morelikethis(id() = 'articles/1', '{ "Fields" : [ "ArticleBody" ] }')
`}
</CodeBlock>
</TabItem>
</Tabs>

## Options

Default parameters can be changed by manipulating `MoreLikeThisOptions` properties and passing them to the `MoreLikeThis`.

| Options | | |
| ------------- | ------------- | ----- |
| **MinimumTermFrequency** | int? | Ignores terms with less than this frequency in the source doc |
| **MaximumQueryTerms** | int? | Returns a query with no more than this many terms |
| **MaximumNumberOfTokensParsed** | int? | The maximum number of tokens to parse in each example doc field that is not stored with TermVector support |
| **MinimumWordLength** | int? | Ignores words less than this length or, if 0, then this has no effect |
| **MaximumWordLength** | int? | Ignores words greater than this length or if 0 then this has no effect |
| **MinimumDocumentFrequency** | int? | Ignores words which do not occur in at least this many documents |
| **MaximumDocumentFrequency** | int? | Ignores words which occur in more than this many documents |
| **MaximumDocumentFrequencyPercentage** | int? | Ignores words which occur in more than this percentage of documents |
| **Boost** | bool? | Boost terms in query based on score |
| **BoostFactor** | float? |  Boost factor when boosting based on score |
| **StopWordsDocumentId** | string | Document ID containing custom stop words |
| **Fields** | string[] | Fields to compare |

## Stop Words

Some of Lucene analyzers have a built-in list of common English words that are usually not useful for searching (like "a", "as", "the" etc.). Those words are called 
*stop words* and they are considered to be uninteresting and ignored. If a used analyzer does not support stop words, or you need to overload them, you can specify your own set of stop words.
A document with a list of stop words can be stored in RavenDB by storing the `MoreLikeThisStopWords` document:

<TabItem value="more_like_this_3" label="more_like_this_3">
<CodeBlock language="csharp">
{`session.Store(new MoreLikeThisStopWords
\{
    Id = "Config/Stopwords",
    StopWords = new List<string> \{ "I", "A", "Be" \}
\});
`}
</CodeBlock>
</TabItem>

The document ID is then set in the `MoreLikeThisOptions`.

## Remarks

<Admonition type="info" title="">
Please note that default values for settings, like `MinimumDocumentFrequency`, `MinimumTermFrequency`, and `MinimumWordLength`, may result in filtering out related articles, especially when there is little data set (e.g. during development).
</Admonition>


</LanguageContent>
<LanguageContent language="java">


MoreLikeThis returns a list of similar documents that are related to a given document. This feature can be used for situations like when a user views an article. Many news sites show a list of the related articles at the bottom of the page. To accomplish this, the RavenDB MoreLikeThis uses the MoreLikeThis from the Lucene contrib project. To find out more about the algorithm, please read Aaron Johnson excellent blog post that is available [here](http://cephas.net/blog/2008/03/30/how-morelikethis-works-in-lucene/).      

## Setup

In order to work, MoreLikeThis requires access to the text in the index. Therefore, the index being queried needs to [store](../../indexes/storing-data-in-index.mdx) the fields or store the [term vectors](../../indexes/using-term-vectors.mdx) for those fields.

<TabItem value="more_like_this_4" label="more_like_this_4">
<CodeBlock language="java">
{`public class Article \{
    private String id;
    private String name;
    private String articleBody;

    public String getId() \{
        return id;
    \}

    public void setId(String id) \{
        this.id = id;
    \}

    public String getName() \{
        return name;
    \}

    public void setName(String name) \{
        this.name = name;
    \}

    public String getArticleBody() \{
        return articleBody;
    \}

    public void setArticleBody(String articleBody) \{
        this.articleBody = articleBody;
    \}
\}

public class Articles_ByArticleBody extends AbstractIndexCreationTask \{
    public Articles_ByArticleBody() \{
        map = "from doc in docs.articles " +
            "select new \{" +
            "   doc.articleBody " +
            "\}";

        store("articleBody", FieldStorage.YES);
        analyze("articleBody", "StandardAnalyzer");
    \}
\}
`}
</CodeBlock>
</TabItem>

## Basic Usage

MoreLikeThis has many defaults already set and the simplest mode will satisfy the majority of the usage scenarios.

<Tabs groupId='languageSyntax'>
<TabItem value="Java" label="Java">
<CodeBlock language="java">
{`List<Article> articles = session
    .query(Article.class, Articles_ByArticleBody.class)
    .moreLikeThis(builder -> builder.usingDocument(x -> x.whereEquals("id()", "articles/1")))
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Articles/ByArticleBody' 
where morelikethis(id() = 'articles/1')
`}
</CodeBlock>
</TabItem>
</Tabs>

MoreLikeThis will use all the fields defined in an index. To use only a specific field or fields, pass them in `MoreLikeThisOptions.Fields` property.

<Tabs groupId='languageSyntax'>
<TabItem value="Java" label="Java">
<CodeBlock language="java">
{`MoreLikeThisOptions options = new MoreLikeThisOptions();
options.setFields(new String[]{ "articleBody" });
List<Article> articles = session
    .query(Article.class, Articles_ByArticleBody.class)
    .moreLikeThis(builder -> builder
        .usingDocument(x -> x.whereEquals("id()", "articles/1"))
        .withOptions(options))
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Articles/ByArticleBody' 
where morelikethis(id() = 'articles/1', '{ "Fields" : [ "articleBody" ] }')
`}
</CodeBlock>
</TabItem>
</Tabs>

## Options

Default parameters can be changed by manipulating `MoreLikeThisOptions` properties and passing them to the `MoreLikeThis`.

| Options | | |
| ------------- | ------------- | ----- |
| **MinimumTermFrequency** | Integer | Ignores terms with less than this frequency in the source doc |
| **MaximumQueryTerms** | Integer | Returns a query with no more than this many terms |
| **MaximumNumberOfTokensParsed** | Integer | The maximum number of tokens to parse in each example doc field that is not stored with TermVector support |
| **MinimumWordLength** | Integer | Ignores words less than this length or, if 0, then this has no effect |
| **MaximumWordLength** | Integer | Ignores words greater than this length or if 0 then this has no effect |
| **MinimumDocumentFrequency** | Integer | Ignores words which do not occur in at least this many documents |
| **MaximumDocumentFrequency** | Integer | Ignores words which occur in more than this many documents |
| **MaximumDocumentFrequencyPercentage** | Integer | Ignores words which occur in more than this percentage of documents |
| **Boost** | Boolean | Boost terms in query based on score |
| **BoostFactor** | Float |  Boost factor when boosting based on score |
| **StopWordsDocumentId** | String | Document ID containing custom stop words |
| **Fields** | String[] | Fields to compare |

## Stop Words

Some of Lucene analyzers have a built-in list of common English words that are usually not useful for searching (like "a", "as", "the" etc.). Those words are called 
*stop words* and they are considered to be uninteresting and ignored. If a used analyzer does not support stop words, or you need to overload them, you can specify your own set of stop words.
A document with a list of stop words can be stored in RavenDB by storing the `MoreLikeThisStopWords` document:

<TabItem value="more_like_this_3" label="more_like_this_3">
<CodeBlock language="java">
{`MoreLikeThisStopWords stopWords = new MoreLikeThisStopWords();
stopWords.setStopWords(Arrays.asList("I", "A", "Be"));
session.store(stopWords, "Config/Stopwords");
`}
</CodeBlock>
</TabItem>

The document ID is then set in the `MoreLikeThisOptions`.

## Remarks

<Admonition type="info" title="">
Please note that default values for settings, like `MinimumDocumentFrequency`, `MinimumTermFrequency`, and `MinimumWordLength`, may result in filtering out related articles, especially when there is little data set (e.g. during development).
</Admonition>


</LanguageContent>
<LanguageContent language="nodejs">


MoreLikeThis returns a list of similar documents that are related to a given document. This feature can be used for situations like when a user views an article. Many news sites show a list of the related articles at the bottom of the page. To accomplish this, the RavenDB MoreLikeThis uses the MoreLikeThis from the Lucene contrib project. To find out more about the algorithm, please read Aaron Johnson excellent blog post that is available [here](http://cephas.net/blog/2008/03/30/how-morelikethis-works-in-lucene/).      

## Setup

In order to work, MoreLikeThis requires access to the text in the index. Therefore, the index being queried needs to [store](../../indexes/storing-data-in-index.mdx) the fields or store the [term vectors](../../indexes/using-term-vectors.mdx) for those fields.

<TabItem value="more_like_this_4" label="more_like_this_4">
<CodeBlock language="js">
{`class Article \{
    constructor(id, name, articleBody) \{
        this.id = id;
        this.name = name;
        this.articleBody = articleBody;
    \}
\}

class Articles_ByArticleBody extends AbstractIndexCreationTask \{
    constructor() \{
        super();

        this.map = \`from doc in docs.Articles select new \{ 
            doc.articleBody 
        \}\`;

        this.store("articleBody", "Yes");
        this.analyze("articleBody", "StandardAnalyzer");
    \}
\}
`}
</CodeBlock>
</TabItem>

## Basic Usage

MoreLikeThis has many defaults already set and the simplest mode will satisfy the majority of the usage scenarios.

<Tabs groupId='languageSyntax'>
<TabItem value="Node.js" label="Node.js">
<CodeBlock language="js">
{`const articles = await session
    .query({ indexName: "Articles/ByArticleBody" })
    .moreLikeThis(builder => 
        builder.usingDocument(x => 
            x.whereEquals("id()", "articles/1")))
    .all();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Articles/ByArticleBody' 
where morelikethis(id() = 'articles/1')
`}
</CodeBlock>
</TabItem>
</Tabs>

MoreLikeThis will use all the fields defined in an index. To use only a specific field or fields, pass them in `MoreLikeThisOptions.fields` property.

<Tabs groupId='languageSyntax'>
<TabItem value="Node.js" label="Node.js">
<CodeBlock language="js">
{`const options = {
    fields: [ "articleBody" ]
};
const articles = await session
    .query({ indexName: "Articles/ByArticleBody" })
    .moreLikeThis(builder => builder
        .usingDocument(x => x.whereEquals("id()", "articles/1"))
        .withOptions(options))
    .all();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Articles/ByArticleBody' 
where morelikethis(id() = 'articles/1', '{ "Fields" : [ "articleBody" ] }')
`}
</CodeBlock>
</TabItem>
</Tabs>

## Options

Default parameters can be changed by manipulating `MoreLikeThisOptions` properties and passing them to the `MoreLikeThis`.

| Options | | |
| ------------- | ------------- | ----- |
| **minimumTermFrequency** | number | Ignores terms with less than this frequency in the source doc |
| **maximumQueryTerms** | number | Returns a query with no more than this many terms |
| **maximumNumberOfTokensParsed** | number | The maximum number of tokens to parse in each example doc field that is not stored with TermVector support |
| **minimumWordLength** | number | Ignores words less than this length or, if 0, then this has no effect |
| **maximumWordLength** | number | Ignores words greater than this length or if 0 then this has no effect |
| **minimumDocumentFrequency** | number | Ignores words which do not occur in at least this many documents |
| **maximumDocumentFrequency** | number | Ignores words which occur in more than this many documents |
| **maximumDocumentFrequencyPercentage** | number | Ignores words which occur in more than this percentage of documents |
| **boost** | boolean | Boost terms in query based on score |
| **boostFactor** | number |  Boost factor when boosting based on score |
| **stopWordsDocumentId** | string | Document ID containing custom stop words |
| **fields** | string[] | Fields to compare |

## Stop Words

Some of Lucene analyzers have a built-in list of common English words that are usually not useful for searching (like "a", "as", "the" etc.). Those words are called 
*stop words* and they are considered to be uninteresting and ignored. If a used analyzer does not support stop words, or you need to overload them, you can specify your own set of stop words.
A document with a list of stop words can be stored in RavenDB by storing the `MoreLikeThisStopWords` document:

<TabItem value="more_like_this_3" label="more_like_this_3">
<CodeBlock language="js">
{`const stopWords = new MoreLikeThisStopWords();
stopWords.stopWords = [ "I", "A", "Be" ];
await session.store(stopWords, "Config/Stopwords");
`}
</CodeBlock>
</TabItem>

The document ID is then set in the `MoreLikeThisOptions`.

## Remarks

<Admonition type="info" title="">
Please note that default values for settings, like `minimumDocumentFrequency`, `minimumTermFrequency`, and `minimumWordLength`, may result in filtering out related articles, especially when there is little data set (e.g. during development).
</Admonition>


</LanguageContent>

<!---
### Client API
- [How to Use MoreLikeThis](../../client-api/session/querying/how-to-use-morelikethis)


-->